--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 /kasuNhentaiCS/file.txt
 /kasuNhentaiCS/BenchmarkDotNet.Artifacts
 /kasuNhentaiCS.json/obj
+/kasuNhentaiCS.json/bin
 /kasuNhentaiCS.json/kasuNhentaiCS.Json.cs
+.fake
+.ionide
